[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/menu/buttons/DefaultButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/map/phasesBack.jpeg" type="Texture" id=2]
[ext_resource path="res://scenes/map/WhatsApp Image 2021-05-16 at 11.09.01.jpeg" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Inconsolata-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/themes/non-selected-map.tres" type="StyleBox" id=5]
[ext_resource path="res://scenes/themes/selected-button-map.tres" type="StyleBox" id=6]
[ext_resource path="res://scenes/map/Map.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/JUSTICE LEAGUE.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 51
font_data = ExtResource( 8 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 511.892, 298.377 )
scale = Vector2( 0.80809, 0.83535 )
texture = ExtResource( 3 )

[node name="phasesBack" parent="." instance=ExtResource( 1 )]
margin_left = 46.0
margin_top = 34.0
margin_right = 190.0
margin_bottom = 94.0
text = "Back"
icon = ExtResource( 2 )
reference_path = "res://scenes/menu/Menu.tscn"

[node name="ButtonLevel1" type="Button" parent="."]
margin_left = 70.7001
margin_top = 447.046
margin_right = 144.7
margin_bottom = 514.046
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "L1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineL12" type="Line2D" parent="."]
points = PoolVector2Array( 124.568, 449.783, 193.49, 307.444 )
width = 4.0
default_color = Color( 0.968627, 0.956863, 0.0980392, 1 )
antialiased = true

[node name="ButtonLevel2" type="Button" parent="."]
margin_left = 184.87
margin_top = 250.597
margin_right = 258.87
margin_bottom = 317.597
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "L2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineL23" type="Line2D" parent="."]
points = PoolVector2Array( 251.924, 308.942, 401.754, 451.281 )
width = 4.0
default_color = Color( 0.941176, 0.968627, 0.0980392, 1 )
antialiased = true

[node name="ButtonLevel3" type="Button" parent="."]
margin_left = 396.421
margin_top = 432.735
margin_right = 470.421
margin_bottom = 499.735
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "L3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineL34" type="Line2D" parent="."]
position = Vector2( 22.4746, -37.4577 )
points = PoolVector2Array( 424.229, 470.759, 451.198, 272.983 )
width = 4.0
default_color = Color( 0.941176, 0.968627, 0.0980392, 1 )
antialiased = true

[node name="ButtonLevel4" type="Button" parent="."]
margin_left = 467.159
margin_top = 181.973
margin_right = 541.159
margin_bottom = 248.973
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "L4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineL45" type="Line2D" parent="."]
points = PoolVector2Array( 541.097, 228.034, 671.45, 341.905 )
width = 4.0
default_color = Color( 0.941176, 0.968627, 0.0980392, 1 )
antialiased = true

[node name="ButtonLevel5" type="Button" parent="."]
margin_left = 670.921
margin_top = 315.184
margin_right = 744.921
margin_bottom = 382.184
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "L5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineL56" type="Line2D" parent="."]
points = PoolVector2Array( 711.904, 313.437, 695.423, 163.606 )
width = 4.0
default_color = Color( 0.941176, 0.968627, 0.0980392, 1 )
antialiased = true

[node name="ButtonLevel6" type="Button" parent="."]
margin_left = 680.422
margin_top = 104.354
margin_right = 754.422
margin_bottom = 171.354
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "L6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineL67" type="Line2D" parent="."]
points = PoolVector2Array( 744.014, 154.076, 904.333, 218.503 )
width = 4.0
default_color = Color( 0.941176, 0.968627, 0.0980392, 1 )
antialiased = true

[node name="ButtonLevel7" type="Button" parent="."]
margin_left = 904.343
margin_top = 198.807
margin_right = 978.343
margin_bottom = 265.807
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
text = "L7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 368.277
margin_top = 22.2236
margin_right = 721.277
margin_bottom = 95.2236
custom_fonts/font = SubResource( 2 )
text = "Select the fase"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonLevel1" to="." method="_on_ButtonLevel1_pressed"]
[connection signal="pressed" from="ButtonLevel2" to="." method="_on_ButtonLevel2_pressed"]
[connection signal="pressed" from="ButtonLevel3" to="." method="_on_ButtonLevel3_pressed"]
[connection signal="pressed" from="ButtonLevel4" to="." method="_on_ButtonLevel4_pressed"]
[connection signal="pressed" from="ButtonLevel5" to="." method="_on_ButtonLevel6_pressed"]
[connection signal="pressed" from="ButtonLevel6" to="." method="_on_ButtonLevel5_pressed"]
[connection signal="pressed" from="ButtonLevel7" to="." method="_on_ButtonLevel7_pressed"]
